<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagen_fondo"
        android:layout_width="101dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="99dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/txt_insesion"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="221dp"
        android:ems="10"
        android:hint="@string/nombre_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_contraseña"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_insesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="49dp"
        android:onClick="inicBtn"
        android:text="@string/iniciar_sesion" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="49dp"
        android:onClick="btnregistrar"
        android:text="@string/registrarse" />

    <TextView
        android:id="@+id/txtlogo"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:text="@string/logo"
        android:textColor="#F8F4F4"
        android:textSize="36sp"
        android:textStyle="normal|bold" />
</RelativeLayout>