<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".Registrarse">

    <TextView
        android:id="@+id/txtregistrar"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:text="@string/registrarse"
        android:textColor="#FCFDFCFC"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePerfil"
        android:layout_width="137dp"
        android:layout_height="119dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="129dp"
        android:contentDescription="@string/cambiar_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtregistrar"
        app:srcCompat="@mipmap/fotoperfil" />

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/cambiar_foto"
        app:layout_constraintStart_toEndOf="@+id/imagePerfil"
        app:layout_constraintTop_toBottomOf="@+id/txtregistrar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="-4dp"
        android:text="@string/quitar_foto"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="298dp"
        android:layout_below="@+id/imagePerfil"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtnombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombres"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtapellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtidusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre_usuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtcontraseña2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/spnrol"
                android:layout_width="match_parent"
                android:layout_height="41dp" />

            <Spinner
                android:id="@+id/spnceducativo"
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <Spinner
                android:id="@+id/spnprograma"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <Spinner
                android:id="@+id/spngenero"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/txtdescripcion"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnregistrarse"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btnRegistrarse"
                android:text="@string/registrar" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>